# todoist-mcp-server

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commitlint.config.mjs  lefthook.yml  pyproject.toml  release-please-config.json  ruff.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: generate-changelog.sh
src/todoist_mcp_server/: __init__.py  client.py  exceptions.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_batch.py  test_client.py  test_tools.py
